--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@ Response:
                       <input type="text" size="4" class="pure-input-4-4" data-stripe="exp-year" placeholder="yyyy" />
                     </div>
                     <div class="form-row">
-                      <button type="submit" class="pure-button pure-button-primary">Submit Payment</button>
+                      <p>
+                        <button type="submit" class="pure-button pure-button-primary">Submit Payment</button>
+                      </p>
                     </div>
                   </form>
                 </p>
@@ -181,21 +183,19 @@ Response:
             <div class="pure-u-1">
               <h2 class="content-subhead">Questions<span class="blue">?</span></h2>
               <p>
-                  <ul>
-                      <li>
-                        <!-- Begin MailChimp Signup Form -->
-                        <div id="mc_embed_signup">
-                          <form class="pure-form" action="http://caradvocates.us7.list-manage.com/subscribe/post?u=eb1a30a267f5cf966e8006590&amp;id=cc3abe189c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                              <div style="position: absolute; left: -5000px;"><input type="text" name="b_eb1a30a267f5cf966e8006590_cc3abe189c" value=""></div>
-                              <input type="submit" value="Subscribe for updates!" name="subscribe" id="mc-embedded-subscribe" class="button pure-button pure-button-primary">
-                          </form>
-                        </div>
-                        <!--End mc_embed_signup-->
-                      </li>
-                      <li>Email: <a href="mailto:tom@getziptastic.com">tom@getziptastic.com</a></li>
-                  </ul>
+                <!-- Begin MailChimp Signup Form -->
+                <div id="mc_embed_signup">
+                  <form class="pure-form" action="http://caradvocates.us7.list-manage.com/subscribe/post?u=eb1a30a267f5cf966e8006590&amp;id=cc3abe189c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                      <div style="position: absolute; left: -5000px;"><input type="text" name="b_eb1a30a267f5cf966e8006590_cc3abe189c" value=""></div>
+                      <input type="submit" value="Subscribe for updates!" name="subscribe" id="mc-embedded-subscribe" class="button pure-button pure-button-primary">
+                  </form>
+                </div>
+                <!--End mc_embed_signup-->
+              </p>
+              <p>
+                      Email: <a href="mailto:tom@getziptastic.com">tom@getziptastic.com</a>
               </p>
             </div>
         </div>
