Stripe and logo image

--- a/index.html
+++ b/index.html
@@ -148,8 +148,51 @@ Response:
 
             <div class="pure-g-r">
               <div class="pure-u-1-3">
-                <h3>Subscribe $1 a month through Stripe</h3>
+                <h3>Give $5 through Stripe</h3>
+<p>
+<form action="" method="POST">
+  <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_test_iIs3BnZV9b3a0PEZULWHnBdK"
+    data-amount="500"
+    data-name="Ziptastic"
+    data-description="$5.00"
+    data-panel-label="Give"
+    data-label="Give $5"
+    data-image="/128x128.png">
+  </script>
+</form>
+</p>
+<p>
+<form action="" method="POST">
+  <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_live_RDrt353zRpv3tjJuUZDgR4sA"
+    data-amount="1000"
+    data-name="Ziptastic"
+    data-description="$10.00"
+    data-panel-label="Give"
+    data-label="Give $10"
+    data-image="/128x128.png">
+  </script>
+</form>
+</p>
+<p>
 
+<form action="" method="POST">
+  <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_live_RDrt353zRpv3tjJuUZDgR4sA"
+    data-amount="2000"
+    data-name="Ziptastic"
+    data-description="$20.00"
+    data-panel-label="Give"
+    data-label="Give $20"
+    data-image="/128x128.png">
+  </script>
+</form>
+</p>
+<!--
                   <form action="http://localhost:1337" class="pure-form" method="POST" id="payment-form">
                     <span class="payment-errors"></span>
 
@@ -166,6 +209,7 @@ Response:
                       <button type="submit" class="pure-button pure-button-primary">Submit Payment</button>
                     </div>
                   </form>
+-->
                 </p>
               </div>
 
