--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="content">
             <div id="subscribed"><h2 class="button-success">Thanks for subscribing!</h2></div>
             <div id="paid"><h2 class="button-success">Thanks for giving!</h2></div>
-            <h2 class="content-subhead">What is Ziptastic<span class="blue">?</span></h2>
+            <h2 class="content-subhead">What <span class="blue">is</span> Ziptastic?</h2>
             <p>
                 Ziptastic is a simple API service that allows people to ask which Country, State, County and City are associated with a <em>postal code</em>.
 
@@ -90,7 +90,7 @@
                 <a href="https://twitter.com/ziptastic1" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow Ziptastic</a> <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-text="Ziptastic! &ndash; Postal Codes &ndash; Using data to make everyday life easier! GetZiptastic.com">Tweet</a>
             </p>
 
-            <h2 class="content-subhead">How to use Ziptastic<span class="blue">!</span></h2>
+            <h2 class="content-subhead">How to <span class="blue">use</span> Ziptastic!</h2>
 
             <div class="pure-g-r">
                 <div class="pure-u-1-3">
@@ -139,6 +139,41 @@ Response:
                 </div>
             </div>
 
+
+
+            <div class="pure-g-r">
+              <div class="pure-u-1">
+                <h2 class="content-subhead">
+                  Ziptastic <span class="blue">Community</span>!
+                </h2>
+
+                <p>Some awesome people have made some libraries that use Ziptastic!</p>
+
+                <ul>
+                  <li>
+                    <a href="https://github.com/daspecster/ziptastic-jquery-plugin">jQuery Ziptastic</a> by <a href="https://github.com/daspecster">Tom Schultz</a>
+                  </li>
+                  <li>
+                    <a href="https://www.npmjs.org/package/ziptastic">Node Ziptastic</a> by <a href="https://twitter.com/bendrucker">Ben Rucker</a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/walterdavis/ziptastic-prototype">Prototype Ziptastic</a> by <a href="https://github.com/walterdavis">Walter Davis</a>
+                  </li>
+                  <li>
+                    <a href="http://rubygems.org/gems/ziptastic">Ziptastic Ruby Gem</a> by <a href="https://github.com/ezkl">Ezekiel Templin</a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/cloudflying/ZipTastic.net">.NET Ziptastic</a> by <a href="https://github.com/cloudflying">Justin Porter</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+
+
+
+
+
             <div class="pure-g-r">
               <div class="pure-u-1">
                 <h2 class="content-subhead">
@@ -150,88 +185,87 @@ Response:
             <div class="pure-g-r">
               <div class="pure-u-1-3">
                 <h3>Give dollars through Stripe</h3>
-<p>
-<form action="" method="POST">
-  <script
-    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="pk_live_RDrt353zRpv3tjJuUZDgR4sA"
-    data-amount="500"
-    data-name="Ziptastic"
-    data-description="$5.00"
-    data-panel-label="Give"
-    data-label="Give $5"
-    data-image="/128x128.png">
-  </script>
-</form>
-</p>
-<p>
-<form action="" method="POST">
-  <script
-    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="pk_live_RDrt353zRpv3tjJuUZDgR4sA"
-    data-amount="1000"
-    data-name="Ziptastic"
-    data-description="$10.00"
-    data-panel-label="Give"
-    data-label="Give $10"
-    data-image="/128x128.png">
-  </script>
-</form>
-</p>
-<p>
+                  <p>
+                    <form action="" method="POST">
+                      <script
+                        src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                        data-key="pk_live_RDrt353zRpv3tjJuUZDgR4sA"
+                        data-amount="500"
+                        data-name="Ziptastic"
+                        data-description="$5.00"
+                        data-panel-label="Give"
+                        data-label="Give $5"
+                        data-image="/128x128.png">
+                      </script>
+                    </form>
+                  </p>
+                  <p>
+                    <form action="" method="POST">
+                      <script
+                        src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                        data-key="pk_live_RDrt353zRpv3tjJuUZDgR4sA"
+                        data-amount="1000"
+                        data-name="Ziptastic"
+                        data-description="$10.00"
+                        data-panel-label="Give"
+                        data-label="Give $10"
+                        data-image="/128x128.png">
+                      </script>
+                    </form>
+                  </p>
 
-<form action="" method="POST">
-  <script
-    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="pk_live_RDrt353zRpv3tjJuUZDgR4sA"
-    data-amount="2000"
-    data-name="Ziptastic"
-    data-description="$20.00"
-    data-panel-label="Give"
-    data-label="Give $20"
-    data-image="/128x128.png">
-  </script>
-</form>
-</p>
+                  <p>
+                    <form action="" method="POST">
+                      <script
+                        src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                        data-key="pk_live_RDrt353zRpv3tjJuUZDgR4sA"
+                        data-amount="2000"
+                        data-name="Ziptastic"
+                        data-description="$20.00"
+                        data-panel-label="Give"
+                        data-label="Give $20"
+                        data-image="/128x128.png">
+                      </script>
+                    </form>
+                  </p>
 
-
-<p>
-
-<form action="" method="POST">
-  <script
-    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="pk_live_RDrt353zRpv3tjJuUZDgR4sA"
-    data-amount="500"
-    data-name="Ziptastic"
-    data-description="$5.00/Month Subscription"
-    data-panel-label="Give"
-    data-label="Give $5 a month"
-    data-image="/128x128.png">
-  </script>
-  <input type="hidden" name="subscription" value="small" />
-</form>
-</p>
+                  <p>
+                    <form action="" method="POST">
+                      <script
+                        src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                        data-key="pk_live_RDrt353zRpv3tjJuUZDgR4sA"
+                        data-amount="500"
+                        data-name="Ziptastic"
+                        data-description="$5.00/Month Subscription"
+                        data-panel-label="Give"
+                        data-label="Give $5 a month"
+                        data-image="/128x128.png">
+                      </script>
+                      <input type="hidden" name="subscription" value="small" />
+                    </form>
+                  </p>
 <!--
-                  <form action="http://localhost:1337" class="pure-form" method="POST" id="payment-form">
-                    <span class="payment-errors"></span>
+                  <p>
+                    <form action="http://localhost:1337" class="pure-form" method="POST" id="payment-form">
+                      <span class="payment-errors"></span>
 
-                    <div class="form-row">
-                      <input type="text" size="20" data-stripe="number" placeholder="Credit Card Number" />
-                      <input type="text" size="4" data-stripe="cvc" placeholder="CVC" />
-                    </div>
+                      <div class="form-row">
+                        <input type="text" size="20" data-stripe="number" placeholder="Credit Card Number" />
+                        <input type="text" size="4" data-stripe="cvc" placeholder="CVC" />
+                      </div>
 
-                    <div class="form-row">
-                      <input type="text" size="2" class="pure-input-4-4" data-stripe="exp-month" placeholder="mm" />
-                      <input type="text" size="4" class="pure-input-4-4" data-stripe="exp-year" placeholder="yyyy" />
-                    </div>
-                    <div class="form-row">
-                      <p>
-                        <button type="submit" class="pure-button pure-button-primary">Submit Payment</button>
-                      </p>
-                    </div>
-                  </form>
+                      <div class="form-row">
+                        <input type="text" size="2" class="pure-input-4-4" data-stripe="exp-month" placeholder="mm" />
+                        <input type="text" size="4" class="pure-input-4-4" data-stripe="exp-year" placeholder="yyyy" />
+                      </div>
+                      <div class="form-row">
+                        <p>
+                          <button type="submit" class="pure-button pure-button-primary">Submit Payment</button>
+                        </p>
+                      </div>
+                    </form>
+                  </p>
 -->
-                </p>
               </div>
 
               <div class="pure-u-2-3">
