Fix hide and show

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         </div>
 
         <div class="content">
-            <div id="subscribed"><h2 class="button-success">Thanks for subscribing!</h2></div>
-            <div id="paid"><h2 class="button-success">Thanks for giving!</h2></div>
+            <div id="subscribed" class="hide"><h2 class="button-success">Thanks for subscribing!</h2></div>
+            <div id="paid"  class="hide"><h2 class="button-success">Thanks for giving!</h2></div>
             <h2 class="content-subhead">What <span class="blue">is</span> Ziptastic?</h2>
             <p>
                 Ziptastic is a simple API service that allows people to ask which Country, State, County and City are associated with a <em>postal code</em>.
