Fix typo in Ben's name

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Response:
                     <a href="https://github.com/daspecster/ziptastic-jquery-plugin">jQuery Ziptastic</a> by <a href="https://github.com/daspecster">Tom Schultz</a>
                   </li>
                   <li>
-                    <a href="https://www.npmjs.org/package/ziptastic">Node Ziptastic</a> by <a href="https://twitter.com/bendrucker">Ben Rucker</a>
+                    <a href="https://www.npmjs.org/package/ziptastic">Node Ziptastic</a> by <a href="https://twitter.com/bendrucker">Ben Drucker</a>
                   </li>
                   <li>
                     <a href="https://github.com/walterdavis/ziptastic-prototype">Prototype Ziptastic</a> by <a href="https://github.com/walterdavis">Walter Davis</a>
