Add angular-ziptastic to 3rd party libs list

--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@ Response:
                     <a href="https://www.npmjs.org/package/ziptastic">Node Ziptastic</a> by <a href="https://twitter.com/bendrucker">Ben Rucker</a>
                   </li>
                   <li>
+                    <a href="https://github.com/bendrucker/angular-ziptastic">Angular Ziptastic</a> by <a href="https://twitter.com/bendrucker">Ben Drucker</a>
+                  </li>
+                  <li>
                     <a href="https://github.com/walterdavis/ziptastic-prototype">Prototype Ziptastic</a> by <a href="https://github.com/walterdavis">Walter Davis</a>
                   </li>
                   <li>
