Clarify purpose/intended use case in preamble

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
             <div id="paid"  class="hide"><h2 class="button-success">Thanks for giving!</h2></div>
             <h2 class="content-subhead">What <span class="blue">is</span> Ziptastic?</h2>
             <p>
-                Ziptastic is a simple API service that allows people to ask which Country, State, County and City are associated with a <em>postal code</em>.
+                Ziptastic is a simple API service that allows you to ask which country, state, county and city are associated with a <em>postal code</em>.
 
             </p>
             <p class="pure-hidden-phone">
-                The purpose for this service is to <em class="blue">STOP</em> the madness of having to fill those information out on webforms. If you've ever filled out a webform, then you have probably gotten to the address section and simply entered in your street information and then your city, country, state, country and then your zip code. This has always bothered me because the 3 fields prior to the zip code can be determined from the zip code!
+                The purpose of this service is to <em class="blue">STOP</em> the madness of requiring users to fill out those fields on web forms. If you've ever filled out a web form, you have probably been prompted to enter your street, city, state, country, and then your zip code. This is unnecessary because the city and state can be determined from the zip code!
             </p>
             <p>
                 <a href="https://twitter.com/ziptastic1" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow Ziptastic</a> <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-text="Ziptastic! &ndash; Postal Codes &ndash; Using data to make everyday life easier! GetZiptastic.com">Tweet</a>
